Java 25 + SB4 migration